syntax = "proto3";

package user;

service UserService {
  rpc GenerateToken(GenerateTokenRequest) returns (GenerateTokenResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);

}

message GenerateTokenRequest {
  string email = 1;
  string password = 2;
}

message GenerateTokenResponse {
  string accessToken = 1;
  string refreshToken = 2;
}


message RefreshTokenRequest {
  int32 userId = 1;
}

message RefreshTokenResponse {
  string accessToken = 1;
}